--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 				</div>
 				<div class="welcome">
 
-					<h2 class="twenty">Welcome To Favison SAAS</h2>
+					<h2 class="twenty">Welcome blah SAAS</h2>
 
 					<p>Firstly, a huge thanks for purchasing this theme, your support is truly appreciated!</p>
 
